[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-groq>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "numpy>=2.3.4",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
